include $(top_srcdir)/common.mk

SUBDIRS=log httpserver judyarray bitmap jsoncpp thread utility shm fetcher httpparser dnsresolver httpclient

include_HEADERS=	\
	log/log.h \
	httpserver/httpserver.h \
	bitmap/DenseBitmap.h \
	bitmap/JudyBitmap.h \
	jsoncpp/include/json/json.h \
	judyarray/Judy.h \
	utility/net_utility.h
